remove fixed style, add top margin to align with btm

--- a/styles/footer.scss
+++ b/styles/footer.scss
@@ -3,8 +3,7 @@
 footer.webpage-footer {
   width: 100%;
   height: 50px;
-  position: fixed;
-  bottom: 0;
+  margin-top: 90px;
   color: colors.$schemeLight;
   background-color: transparent;
   display: flex;
